--- a/promote.html
+++ b/promote.html
@@ -211,7 +211,15 @@
                                         </div>
                                     </a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="admittedstudents.html">
+                                        <div><i class="las la-file"></i>Admitted Students</div>
+                                        <!-- <div class="d-flex  align-items-center">
+                                                                                                                                                                            <p class="mb-0 text-small text-danger">2 Pending</p>
+                                                                                                                                                                        </div> -->
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
                                         href="sendsms.html">
