--- a/changePassword.html
+++ b/changePassword.html
@@ -243,6 +243,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="uploadDocs.html">
+                                        <div><i class="las la-plus"></i>Upload Documents</div>
+                                
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center"
                                         aria-current="page" href="promote.html">
                                         <div><i class="las la-plus"></i>Promote Candidate</div>
