--- a/promote.html
+++ b/promote.html
@@ -249,6 +249,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="recoverpassword.html">
+                                        <div><i class="las la-plus"></i>Recover Password</div>
+                                
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center"
                                         aria-current="page" href="dash-settings.html">
                                         <div><i class="las la-cog"></i>Settings</div>
