--- a/stageThree.html
+++ b/stageThree.html
@@ -264,6 +264,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="recoverpassword.html">
+                                        <div><i class="las la-plus"></i>Recover Password</div>
+                                
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center text-danger"
                                         aria-current="page" href="#">
                                         <div><i class="las la-sign-out-alt"></i>Logout</div>
