--- a/admittedstudents.html
+++ b/admittedstudents.html
@@ -231,7 +231,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
                                         href="admittedstudents.html">
-                                        <div><i class="las la-file"></i>Admitted Students</div>
+                                        <div><i class="las la-file"></i>Admitted Candidates</div>
                                         <!-- <div class="d-flex  align-items-center">
                                                                                                                                                                             <p class="mb-0 text-small text-danger">2 Pending</p>
                                                                                                                                                                         </div> -->
@@ -335,7 +335,7 @@
                                             <div class="card-header border-bottom">
                                                 <div class="d-flex align-items-center">
                                                     <div>
-                                                        <h6 class="card-title mb-0">Admitted Students</h6>
+                                                        <h6 class="card-title mb-0">Admitted Candidates</h6>
                                                     </div>
                                                 </div>
                                             </div>
