--- a/promote.html
+++ b/promote.html
@@ -214,7 +214,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
                                         href="admittedstudents.html">
-                                        <div><i class="las la-file"></i>Admitted Students</div>
+                                        <div><i class="las la-file"></i>Admitted Candidates</div>
                                         <!-- <div class="d-flex  align-items-center">
                                                                                                                                                                             <p class="mb-0 text-small text-danger">2 Pending</p>
                                                                                                                                                                         </div> -->
