--- a/dashboard.html
+++ b/dashboard.html
@@ -170,10 +170,20 @@
                                         href="allCandidates.html">
                                         <div><i class="las la-file"></i>All Candidates</div>
                                         <!-- <div class="d-flex  align-items-center">
-                                                                            <p class="mb-0 text-small text-danger">2 Pending</p>
-                                                                        </div> -->
+                                                                                                            <p class="mb-0 text-small text-danger">2 Pending</p>
+                                                                                                        </div> -->
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="manageCandidates.html">
+                                        <div><i class="las la-file"></i>Manage Candidates</div>
+                                        <!-- <div class="d-flex  align-items-center">
+                                                                                                            <p class="mb-0 text-small text-danger">2 Pending</p>
+                                                                                                        </div> -->
+                                    </a>
+                                </li>
+                              
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
                                         href="admittedstudents.html">
@@ -276,12 +286,7 @@
                         </div>
                     </aside>
                     <div class="col-lg-9">
-                        <!-- <div class="alert alert-success alert-dismissible fade show" role="alert"> -->
-                            <!-- <strong>Welcome back!</strong> You should check in on some of those fields below.
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">×</span>
-                            </button> -->
-                        <!-- </div> -->
+                     
                         <div class="row">
                             <div class="col-12 col-sm-6 col-md-6 col-xl-4 grid-margin stretch-card">
                                 <div class="card">
