--- a/dash-add-item.html
+++ b/dash-add-item.html
@@ -469,6 +469,11 @@
                                                         <input type="number" class="form-control" id="l301" />
                                                         </div>
                                                     </div>
+                                                    <div class="col-lg-12">
+                                                        <label for="l301">LIST ANY MEDICAL AND OR MENTAL PROBLEMS
+                                                            (ILLNESSES) SUFFERED</label>
+                                                        <textarea class="form-control col-lg-12"></textarea>
+                                                    </div>
                                                    
                                                 </div>
                                                
@@ -500,7 +505,7 @@
                                             <button type="button" class="btn btn-danger">Cancel</button>
                                             </div>
                             </div>
-                            <button type="button" class="btn btn-primary width-150 mt-3">
+                            <button type="button" class="btn btn-primary width-150 mt-5">
                                 Submit
                             </button>
                         </div>
