--- a/dash-add-item.html
+++ b/dash-add-item.html
@@ -192,7 +192,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page" href="dash-add-item.html">
-                                        <div><i class="las la-plus"></i>Add Candidate</div>
+                                        <div><i class="las la-plus"></i>Add Personal Information</div>
 
                                     </a>
                                 </li>
@@ -479,9 +479,9 @@
                                                
                                                 
                                            </div>
-                                            <div class="col-lg-4 mt-2">
-                                                <h4 class="text-black mb-3">Upload Passport</h4>
-                                                <div class="add-item position-relative mb-3">
+                                            <div class="col-lg-4 ">
+                                                <label class="text-black  mb-1">Upload Passport</label>
+                                                <div class="add-item position-relative  mt-1 mb-4">
                                                     <div class="add-item-img d-flex justify-content-center border border-radius py-6">
                                                         <a href="javascript: void(0);">
                                                             <i class="las la-file"></i>
