--- a/manageCandidates.html
+++ b/manageCandidates.html
@@ -222,7 +222,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center"
                                         aria-current="page" href="dash-add-item.html">
-                                        <div><i class="las la-plus"></i>Add Candidate</div>
+                                        <div><i class="las la-plus"></i>Add Personal Information</div>
 
                                     </a>
                                 </li>
