--- a/manageCandidates.html
+++ b/manageCandidates.html
@@ -213,6 +213,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="addUser.html">
+                                        <div><i class="las la-plus"></i>Add User</div>
+                                
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center"
                                         aria-current="page" href="sendsms.html">
                                         <div><i class="las la-plus"></i>Send SMS</div>
