--- a/allCandidates.html
+++ b/allCandidates.html
@@ -236,6 +236,13 @@
                                                                                                                                         </div> -->
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
+                                        href="addUser.html">
+                                        <div><i class="las la-plus"></i>Add User</div>
+                                
+                                    </a>
+                                </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link active d-flex justify-content-between align-items-center" aria-current="page"
