--- a/dashboard.html
+++ b/dashboard.html
@@ -363,7 +363,7 @@
                                             </button>
                                         </div>
                                         <div class="col-lg-6 mt-4">
-                                            <span class="invoiceNumber">here</span>
+                                            <span class="invoiceNumber"></span>
                                         </div>
                                         <div class="col-lg-6 mt-5 mb-4">
                                             <button type="button" class="btn btn-primary width-150">
